--- a/trial_controller_velocity/CMakeLists.txt
+++ b/trial_controller_velocity/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   panda_ecat_comm
   data_extraction
   general_functionalities
+  dynamic_reconfigure
   qpoases
 )
 
@@ -20,6 +21,10 @@ find_package(catkin REQUIRED COMPONENTS
 find_package(Eigen3 REQUIRED)
 
 find_package(Franka 0.7.0 REQUIRED)
+
+generate_dynamic_reconfigure_options(
+  cfg/trial_controller_velocity.cfg
+)
 
 catkin_package(
   INCLUDE_DIRS include
@@ -32,6 +37,7 @@ catkin_package(
     panda_ecat_comm
     data_extraction
     general_functionalities
+    dynamic_reconfigure
     qpoases
   DEPENDS Franka
 )
@@ -46,10 +52,7 @@ add_dependencies(trial_controller_velocity
 )
 
 target_link_libraries(trial_controller_velocity PUBLIC
-  #${CMAKE_CURRENT_SOURCE_DIR}/optimizer1/target/release/liboptimizer1.a
-  ${CMAKE_CURRENT_SOURCE_DIR}/optimizer2/target/release/liboptimizer2.a
-  ${CMAKE_CURRENT_SOURCE_DIR}/optimizer4/target/release/liboptimizer4.a
-  ${CMAKE_CURRENT_SOURCE_DIR}/optimizer5/target/release/liboptimizer5.a
+  ${CMAKE_CURRENT_SOURCE_DIR}/optimizer6/target/release/liboptimizer6.a
   ${Franka_LIBRARIES}
   ${catkin_LIBRARIES}
 )
@@ -61,10 +64,7 @@ target_include_directories(trial_controller_velocity SYSTEM PUBLIC
 )
 target_include_directories(trial_controller_velocity PUBLIC
   include
-  #optimizer1
-  optimizer2
-  optimizer4
-  optimizer5
+  optimizer6
 )
 
 ## Installation
