--- a/trial_controller_velocity/optimizer6/optimizer.yml
+++ b/trial_controller_velocity/optimizer6/optimizer.yml
@@ -2,11 +2,11 @@ _comment: auto-generated file; do not modify
 build:
   build_dir: .
   build_mode: release
-  cost_function_name: phi_phGtujSYPnSEUHbdqHPZ
-  grad_function_name: grad_phi_phGtujSYPnSEUHbdqHPZ
-  id: phGtujSYPnSEUHbdqHPZ
-  mapping_f1: mapping_f1_phGtujSYPnSEUHbdqHPZ
-  mapping_f2: mapping_f2_phGtujSYPnSEUHbdqHPZ
+  cost_function_name: phi_IpWnUQKroOtMRDQEQMdL
+  grad_function_name: grad_phi_IpWnUQKroOtMRDQEQMdL
+  id: IpWnUQKroOtMRDQEQMdL
+  mapping_f1: mapping_f1_IpWnUQKroOtMRDQEQMdL
+  mapping_f2: mapping_f2_IpWnUQKroOtMRDQEQMdL
   open_version: null
   opengen_version: 0.6.11
   target_system: null
