after updating Franka system version to 4.0.4

--- a/trial_controller_velocity/config/trial_controller_velocity.yaml
+++ b/trial_controller_velocity/config/trial_controller_velocity.yaml
@@ -2,13 +2,13 @@ trial_controller_velocity:
     type: trial_controller_velocity/TrialControllerVelocity
     m_tr: 5
     m_rot: 0.1
-    d_tr: 5
-    d_rot: 0.2
+    d_tr: 10
+    d_rot: 0.4
     only_transl: true
-    only_x: true
+    only_x: false
     only_damping: false
     small_mass: true
-    m_tr_no_mass: 0.05
-    m_rot_no_mass: 0.05
-    d_tr_no_mass: 10
-    d_rot_no_mass: 0.5
+    m_tr_no_mass: 5
+    m_rot_no_mass: 0.1
+    d_tr_no_mass: 50
+    d_rot_no_mass: 0.4
