before forking franka_ros and panda_moveit_config

--- a/simple_admittance_controller/CMakeLists.txt
+++ b/simple_admittance_controller/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.4)
-project(data_extraction)
+project(simple_admittance_controller)
 
 set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_STANDARD 14)
@@ -11,7 +11,9 @@ find_package(catkin REQUIRED COMPONENTS
   hardware_interface
   pluginlib
   panda_ecat_comm
+  data_extraction
   general_functionalities
+  dynamic_reconfigure
 )
 
 
@@ -19,44 +21,50 @@ find_package(Eigen3 REQUIRED)
 
 find_package(Franka 0.7.0 REQUIRED)
 
+generate_dynamic_reconfigure_options(
+  cfg/simple_admittance_controller.cfg
+)
+
 catkin_package(
   INCLUDE_DIRS include
-  LIBRARIES data_extraction
+  LIBRARIES simple_admittance_controller
   CATKIN_DEPENDS
     controller_interface
     franka_hw
     hardware_interface
     pluginlib
     panda_ecat_comm
+    data_extraction
     general_functionalities
+    dynamic_reconfigure
   DEPENDS Franka
 )
 
-add_library(data_extraction
-  src/data_extraction_controller.cpp
+add_library(simple_admittance_controller
+  src/simple_admittance_controller.cpp
 )
 
-add_dependencies(data_extraction
+add_dependencies(simple_admittance_controller
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
   ${catkin_EXPORTED_TARGETS}
 )
 
-target_link_libraries(data_extraction PUBLIC
+target_link_libraries(simple_admittance_controller PUBLIC
   ${Franka_LIBRARIES}
   ${catkin_LIBRARIES}
 )
 
-target_include_directories(data_extraction SYSTEM PUBLIC
+target_include_directories(simple_admittance_controller SYSTEM PUBLIC
   ${Franka_INCLUDE_DIRS}
   ${EIGEN3_INCLUDE_DIRS}
   ${catkin_INCLUDE_DIRS}
 )
-target_include_directories(data_extraction PUBLIC
+target_include_directories(simple_admittance_controller PUBLIC
   include
 )
 
 ## Installation
-install(TARGETS data_extraction
+install(TARGETS simple_admittance_controller
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -67,7 +75,7 @@ install(DIRECTORY launch
 install(DIRECTORY config
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
-install(FILES data_extraction_controller_plugin.xml
+install(FILES simple_admittance_controller_plugin.xml
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
@@ -81,9 +89,9 @@ if(CLANG_TOOLS)
     ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
   )
-  add_format_target(data_extraction_controller FILES ${SOURCES} ${HEADERS})
-  add_tidy_target(data_extraction_controller
+  add_format_target(simple_admittance_controller FILES ${SOURCES} ${HEADERS})
+  add_tidy_target(simple_admittance_controller
     FILES ${SOURCES}
-    DEPENDS data_extraction_controller
+    DEPENDS simple_admittance_controller
   )
 endif()
